# fastapi-experiment

./: .gitignore  pyproject.toml
note_api/: main.py
note_api/note/: __init__.py  model.py  ressource.py  schema.py
note_api/shared/: database.py
