[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "note-api"
version = "0.1.0"
description = "A sample API to save and query note"
readme = "README.md" # Optional
requires-python = ">=3.11"
# license = {file = "LICENSE.txt"}
authors = [{name = "Sebastien LOVERGNE" }]
dependencies = [ # Optional
    "uvicorn~=0.22.0",
    "fastapi~=0.97.0",
    "alembic~=1.11.1",
    "sqlalchemy~=2.0.16",
]

[project.optional-dependencies] # Optional
dev = [
    "pytest~=7.3.2",
    "black~=23.3.0",
    "isort~=5.12.0",
    "ruff~=0.0.272",
    "pytest-cov~=4.1.0",
    "pre-commit~=3.3.3",
]


[tool.ruff]
ignore-init-module-imports = true
